mini sqlite db, unload image

--- a/src/nr_deckbuilder.ui
+++ b/src/nr_deckbuilder.ui
@@ -1,20 +1,23 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="main_window">
     <property name="visible">True</property>
+    <property name="can_focus">False</property>
     <property name="title" translatable="yes">Netrunner Deck builder</property>
     <property name="default_width">500</property>
     <property name="default_height">400</property>
     <child>
       <object class="GtkTable" id="table1">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="n_rows">3</property>
         <property name="n_columns">3</property>
         <child>
           <object class="GtkImage" id="image">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="stock">gtk-missing-image</property>
             <property name="icon-size">3</property>
           </object>
@@ -28,6 +31,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
+            <property name="use_action_appearance">False</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -50,7 +54,19 @@
           <placeholder/>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkButton" id="unloadbtn">
+            <property name="label" translatable="yes">Unload</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <property name="use_action_appearance">False</property>
+          </object>
+          <packing>
+            <property name="left_attach">1</property>
+            <property name="right_attach">2</property>
+            <property name="top_attach">1</property>
+            <property name="bottom_attach">2</property>
+          </packing>
         </child>
       </object>
     </child>
